- [BREAKING] TiledCollisionFactory now takes TiledMap as parameter
- (#74) Added TiledMapLoader for loading TiledMap instances via AssetManager
- Added new FlexDirections; ROW_REVERSE and CENTER
- Added Sprite#getAlpha() method
- Added jacocoTestReport for better code coverage reporting
- Added #equals method to ControllerButton implementations
- Prototype beans no longer require setters/getters for dependency injection
- Fixed merging concurrency exception during object movement within concurrent QuadTrees
- Fixed incorrect Circle bounding box dimensions
- Fixed dependency injection validating injection too early
- (#53) Increased code coverage on Rectangle and Circle

[1.6.5]
- (#72) Fixed support for flipped tiles in Tiled object GID

[1.6.4]
- (#71) Fixed regression with missing setCenter method in shapes after 1.3 refactor
- Fixed child UI elements receiving mouseDown events when hidden

[1.6.3]
- Added additional UiElement defer method that accepts a duration
- UI defer operations can now be cancelled

[1.6.2]
- Added support for rotated + flipped tiles
- Added TiledObject#getProperties method
- Fixed Tiled property parse notification for TSX tilesets

[1.6.1]
- Added support for animated tiles

[1.6.0]
- Added hexagonal Tiled map support
- TSX tilesets now shared across TiledMap instances when path is same - reduces memory usage

[1.5.4]
- Added more utility methods to TiledCollisionMapper
- Added TiledMap.getLayerIndexIgnoreCase
- Added support for Tile type attribute

[1.5.3]
- (#70) Fixed libgdx stage2D integration for UiContainer

[1.5.2]
- Fixed locking exception in removeAll(List) for concurrent QuadTree implementations

[1.5.1]
- Added JRebel support to UiContainer
- Added label + icon getters for TabButton
- Added removeAll() method to UiNavigation interface and implementations

[1.5.0]
WARNING: This release changes the default target timestep from 100FPS to 60FPS. 
To change it back set config.targetTimestep to 0.1f
