@@ -65,7 +65,7 @@ def docProjects() {
 	subprojects.findAll { !it.name.contains('uat') }
 }
 
-def projectVersion = '1.7.0-beta.5';
+def projectVersion = '1.7.0-SNAPSHOT';
 
 configure(docProjects()) {
 	apply plugin: "java"
