@@ -7,6 +7,7 @@
 - Added Sprite#getAlpha() method
 - Added jacocoTestReport for better code coverage reporting
 - Added #equals method to ControllerButton implementations
+- TiledCollisionFactory can now return null to specify no collision
 - Prototype beans no longer require setters/getters for dependency injection
 - Fixed merging concurrency exception during object movement within concurrent QuadTrees
 - Fixed incorrect Circle bounding box dimensions
